# tg

./: .gitignore  README.md  create_datasets.ipynb  find_seasonality_period.ipynb  optuna.db  report.ipynb  setup.cfg  setup.py
mlruns/0/: meta.yaml
mlruns/0/0064eea9c6af4cabbd378cff6f5796ca/: meta.yaml
mlruns/0/03be3c66e2f440059dbda3d55e241c99/: meta.yaml
mlruns/0/051f22a81ec64521bb1c379f98c6c6d2/: meta.yaml
mlruns/0/059747f4e1904db396b84e4478d57f05/: meta.yaml
mlruns/0/0698b7158d5243fd9ff163668fa89459/: meta.yaml
notebooks/: 00_create_datasets.ipynb  00_predictions.ipynb  01_find_seasonality_period.ipynb  01_model_exploring.ipynb  02_create_datasets.ipynb  02_modify_optuna_db.ipynb  03_create_reports copy.ipynb  03_create_reports.ipynb  03_find_seasonality_period.ipynb  04_hybrid_model_testing.ipynb  04_model_runs.ipynb  04_testing.ipynb  05_hybrid_model_testing.ipynb  05_model_runs.ipynb  06_create_figures.ipynb  06_create_paper_figs.ipynb
old/: models.py  ts_models copy.py
reports/: tables.tex
seasonality-test/: .RData  .Rhistory
seasonality-test/raw/: homicides.csv  noisy_sine.csv  random_walk.csv
src/: datasets.py  main.py  metrics.py  models.py  splitters.py  test.ipynb  ts_models.py
src/tg/: __init__.py  datasets.py  format.py  hybrid_model.py  interactors.py  main.py  metrics.py  mlflow_run.py  model_interactor.py  model_interfaces.py  models.py  parallel_optimization.py  splitters.py  test.py  ts_models.py  utils.py
tg-seasonal-time-series/: README.md  pyproject.toml
tg-seasonal-time-series/src/: setup.py
(+2269 files in other folders)
