[options]
python_requires = < 3.11

install_requires =
    pandas == 1.5.0
    numpy == 1.23.3
    ipykernel == 6.16.0
    protobuf==3.19.2
    mlflow == 1.29.0
    optuna == 2.10.1
    keras == 2.10.0
    pmdarima == 2.0.1
    ipywidgets == 8.0.2
    build == 0.8.0
    tensorflow == 2.10.0
    
include_package_data = True
packages = find_namespace:
package_dir == 
    = src

[options.packages.find]
where = src