[options]
python_requires = < 3.11

install_requires =
    pandas == 1.5.0
    numpy == 1.22.4
    ipykernel == 6.16.0
    protobuf==3.19.2
    mlflow == 1.29.0
    optuna == 2.10.1
    keras == 2.10.0
    pmdarima == 2.0.1
    ipywidgets == 8.0.2
    build == 0.8.0
    tensorflow == 2.10.0
    yapf == 0.32.0
    matplotlib == 3.6.1
    sktime == 0.13.4
    dask == 2022.10.0
    distributed == 2022.10.0
    scikit-elm == 0.21a0
    seaborn == 0.12.1
    
include_package_data = True
packages = find_namespace:
package_dir == 
    = src

[options.packages.find]
where = src